<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_main"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:paddingLeft="@dimen/dimen_13dp"
        android:paddingRight="@dimen/dimen_13dp"
        android:id="@+id/rl_local_music">

        <ImageView
            android:layout_width="@dimen/dimen_26dp"
            android:layout_height="@dimen/dimen_26dp"
            android:id="@+id/iv_ico_local"
            android:layout_centerVertical="true"
            android:src="@drawable/lay_icn_upquality"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16sp"
            android:layout_toRightOf="@id/iv_ico_local"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/text_color_main"
            android:id="@+id/tv_local"
            android:text="@string/local_music" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_13sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_local"
            android:textColor="@color/text_color_5"
            android:id="@+id/tv_local_music_count"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:text="(0)"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dimen_23dp"
            style="@style/DivideLineHorizontal"></View>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:paddingLeft="@dimen/dimen_13dp"
        android:paddingRight="@dimen/dimen_13dp"
        android:visibility="gone"
        android:id="@+id/rl_lately_play">

        <ImageView
            android:layout_width="@dimen/dimen_26dp"
            android:layout_height="@dimen/dimen_26dp"
            android:id="@+id/iv_ico_lately"
            android:layout_centerVertical="true"
            android:src="@drawable/lay_icn_alb"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16sp"
            android:layout_toRightOf="@id/iv_ico_lately"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:id="@+id/tv_latey"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/text_color_main"
            android:text="@string/latey_play"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_13sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_latey"
            android:textColor="@color/text_color_5"
            android:id="@+id/tv_latey_music_count"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:text="(0)"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dimen_23dp"
            style="@style/DivideLineHorizontal"></View>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        android:paddingLeft="@dimen/dimen_13dp"
        android:paddingRight="@dimen/dimen_13dp"
        android:id="@+id/rl_down_music">

        <ImageView
            android:layout_width="@dimen/dimen_26dp"
            android:layout_height="@dimen/dimen_26dp"
            android:id="@+id/iv_ico_down"
            android:layout_centerVertical="true"
            android:src="@drawable/lay_icn_dld"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_16sp"
            android:layout_toRightOf="@id/iv_ico_down"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:ellipsize="end"
            android:id="@+id/tv_down"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/text_color_main"
            android:text="@string/down_manager"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_13sp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_down"
            android:id="@+id/tv_down_music_count"
            android:textColor="@color/text_color_5"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:text="(0)"/>

        <View
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/dimen_23dp"
            style="@style/DivideLineHorizontal"></View>

    </RelativeLayout>

</LinearLayout>
